Fix color contrast issue

--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ body {
 	flex-wrap: wrap;
 	padding: 0;
 	font-size: 12px;
-	color: #999;
+	color: #666;
 	text-align: center;
 	list-style: none;
 }
